# OpenClerq

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml  release-macos-signed.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx  ModuleHost.tsx  SettingsWindow.tsx  configTypes.ts  gateway.ts  moduleLoader.ts  moduleRegistry.ts  moduleSlots.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: CalculatorPanel.tsx  CapabilitiesSection.tsx  CollapsibleSection.tsx  LogsPanel.tsx  MemorySection.tsx  ReasoningSection.tsx  SecretsVaultSection.tsx  SkillsSection.tsx  StatusCard.tsx  SystemPromptSection.tsx  TriggersSection.tsx
docs/: ABOUT_CLERQ.md  ARCHITECTURE.md  ARITHMETIC_API.md  DEVELOPER_SETUP.md  DISTRIBUTION.md  ERROR_RESPONSE_SHAPE.md  INSTALLER_DISCLAIMER.md  MODULE_SYSTEM.md  SAFETY_CHECKLIST.md  TOOLS.md
scripts/: Start-Clerq-Mac.command  Start-Clerq-Win.bat  build-desktop.js  build-sidecars.js  generate-updater-manifest.js  setup-updater-keys.sh  sync-version.js  verify-local.sh
skills/example/: SKILL.md
