[package]
name = "clerq-desktop"
version = "0.1.0"
description = "Clerq — local administrative agent desktop app"
authors = ["Clerq Team"]
license = "MIT"
repository = "https://github.com/paxamedia/OpenClerq"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
